--- a/index.html
+++ b/index.html
@@ -1,56 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content=" Desafío JavaScript en práctica" />
-    <meta name="keywords" content="JavaScript" />
-    <title>Ejercicio Formulario</title>
+    <title>DesafioJS</title>
 </head>
-
 <body>
-    <div>
-        <div style="width: 40%;margin: 0 auto">
-            <h2>
-                Escríbenos !!!
-            </h2>
-            <div class="resultado" style="color:green;font-style: italic">
-            </div>
-            <form id="formulario">
-                <div>
-                    <div style="display: flex;flex-direction: column;">
-                        <label>
-                            Nombre completo
-                        </label>
-                        <input id="nombre" type="text">
-                        <p class="errorNombre" style="color:red;font-style: italic;"></p>
-                    </div>
-                    <div style="display: flex;flex-direction: column;">
-                        <label>
-                            Asunto
-                        </label>
-                        <input id="asunto" type="text">
-                        <p class="errorAsunto" style="color:red;font-style: italic;"></p>
-                    </div>
-                </div>
-                <div style="display: flex;flex-direction: column;">
-                    <label>
-                        Mensaje
-                    </label>
-                    <textarea id="mensaje"></textarea>
-                    <p class="errorMensaje" style="color:red;font-style: italic;"></p>
-                </div>
-                <div>
-                    <button id="botton" type="submit">
-                        Envíar mensaje
-                    </button>
-                </div>
-            </form>  
-        </div>
-    </div>
-    <div id="message" style="width: 40%;margin: 0 auto"></div>
-    
-    <script src="./assets/js/form.js"></script>
+    <div class="container">
+        <h1>Desafio JavaScript:</h1>
+        <div><a href="ejer1.html" > Formulario</a></div>
+        <div><a href="ejer2.html" > Paleta de colores</a></div>
+        <div><a href="ejer3.html" > Calculadora</a></div>
+      </div> 
+
+
+
 </body>
 </html>
